# combinatorial

./: .gitignore  .gitmodules  Makefile  README.md  lineToTab.py  run-1754.txt  run-1824.txt  run.txt  seabed-preprocess.cpp  seabed-preprocess.h
CableRouter/: CMakeLists.txt  README.md  linereader.cpp  linereader.h  main.cpp  plot.md  reader.cpp  reader.h  simplifier.cpp  simplifier.h  solver.h  structures.cpp  structures.h  tests.cpp  tobinary.cpp
CableRouter/experiment-0-ga-convergence/: combined.eps  combined.ps  combined.tex  ga-compl6-csv-plots.gnuplot.txt  result-0.txt  result-1.txt  result-2.txt  result-3.txt  result-4.txt  result-5.txt  result-m-l-h-0.txt  result-m-l-h-1.txt  result-m-l-h-2.txt  result-m-l-h-3.txt  result-m-l-h-4.txt  result-m-l-h-5.txt  result-to-columns.js  run-ga-aBiPop-compl6.csv  run-ga-aIpop-compl6.csv  run-ga-aVanilla-compl6.csv  run-ga-bipop-compl6.csv  run-ga-ipop-compl6.csv  run-ga-vanilla-compl6.csv  run.js
CableRouter/experiment-1-ga-compare/: all.sh  column-0.txt  column-1.txt  column-2.txt  column-3.txt  column-4.txt
CableRouter/experiment-2/: all.sh  column-0.txt  column-1.txt  column-2.txt  column-3.txt  column-4.txt  convert-out-files.js  ex-0.txt  ex-1.txt  ex-10.txt  ex-11.txt  ex-12.txt  ex-13.txt  ex-14.txt  ex-15.txt  ex-16.txt  ex-17.txt  ex-18.txt  ex-19.txt  ex-2.txt  ex-20.txt  ex-21.txt  ex-22.txt  ex-23.txt  ex-24.txt  ex-25.txt  ex-26.txt  ex-27.txt  ex-28.txt  ex-29.txt  ex-3.txt  ex-30.txt  ex-31.txt  ex-32.txt  ex-33.txt  ex-34.txt  ex-35.txt  ex-36.txt  ex-37.txt  ex-38.txt  (+452 more)
CableRouter/ga/: ga.cpp  ga.h
(+17 files in other folders)
